--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
      <!-- CSS SHEET -->
 
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
